--- a/docker-sync.yml
+++ b/docker-sync.yml
@@ -7,5 +7,5 @@ syncs:
     notify_terminal: true
     src: './data/www'
 
-sync_host_ip: '127.0.0.1'
-sync_host_port: 10872
+#sync_host_ip: '127.0.0.1'
+#sync_host_port: 10872
